crates/cribo/tests/snapshots/bundled_code@symlink_multi_circular.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/symlink_multi_circular/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n, *, _getattr=getattr):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return _getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n, *, _getattr=getattr, _object=object):
        return _object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else _getattr(_object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None, reload_target=None):
        self._entry = entry
        self._namespace = namespace
        self._reload_target = reload_target

    def create_module(self, spec, *, _getattr=getattr, _globals=globals, _id=id, _setattr=setattr, _type=type, _SimpleNamespace=_cribo.types.SimpleNamespace):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = _globals()[self._entry[1]]
        if module is not None:
            if _getattr(module, '_cribo_machinery_loaded', False):
                saved = _type(self)._pristine.get(_id(module))
                fresh = _SimpleNamespace()
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                return fresh
            return module
        module = _SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            _setattr(module, export, _globals()[binding])
        return module

    def exec_module(self, module, *, _BaseException=BaseException, _dict=dict, _globals=globals, _id=id, _type=type):
        init = self._entry[0]
        pristine = _type(self)._pristine
        key = _id(module)
        if init is None:
            if key not in pristine:
                pristine[key] = _dict(module.__dict__)
            module._cribo_machinery_loaded = True
            return
        is_reload = self._reload_target is module
        if is_reload:
            module.__initialized__ = False
            module.__initializing__ = False
        state = _dict(module.__dict__)
        if key not in pristine:
            pristine[key] = _dict(state)
        try:
            _globals()[init](module)
            module._cribo_machinery_loaded = True
        except _BaseException:
            if is_reload:
                module.__initializing__ = False
            else:
                module.__dict__.clear()
                module.__dict__.update(state)
                module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name), target), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder_local.register('real_a', '_cribo_init___cribo_5676b5_real_a', 'real_a', False)
_cribo_finder_local.register('real_b', '_cribo_init___cribo_85e139_real_b', 'real_b', False)
real_a = _cribo.types.SimpleNamespace(__name__='real_a', __initializing__=False, __initialized__=False)
_cribo_finder.bind('real_a', real_a)
real_b = _cribo.types.SimpleNamespace(__name__='real_b', __initializing__=False, __initialized__=False)
_cribo_finder.bind('real_b', real_b)
def _cribo_init___cribo_5676b5_real_a(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = ''
    _cribo_self.__doc__ = None

    def start_chain():
        from_b = _cribo_init___cribo_85e139_real_b(globals()['real_b']).from_b
        return f"A -> {from_b()}"
    start_chain.__module__ = 'real_a'
    start_chain.__qualname__ = 'start_chain'
    _cribo_self.start_chain = start_chain

    def from_a():
        return "A"
    from_a.__module__ = 'real_a'
    from_a.__qualname__ = 'from_a'
    _cribo_self.from_a = from_a

    def from_c():
        return "C(->A)"
    from_c.__module__ = 'real_a'
    from_c.__qualname__ = 'from_c'
    _cribo_self.from_c = from_c

    def from_e():
        return "E(->A)"
    from_e.__module__ = 'real_a'
    from_e.__qualname__ = 'from_e'
    _cribo_self.from_e = from_e

    def unused_function_a():
        unused_function_b = _cribo_init___cribo_85e139_real_b(globals()['real_b']).unused_function_b
        return f"Unused A -> {unused_function_b()}"
    unused_function_a.__module__ = 'real_a'
    unused_function_a.__qualname__ = 'unused_function_a'
    _cribo_self.unused_function_a = unused_function_a

    def unused_with_stdlib():
        json = _cribo.json
        _cribo_self.json = json
        os = _cribo.os
        _cribo_self.os = os
        return _cribo.json.dumps({"path": _cribo.os.getcwd()})
    unused_with_stdlib.__module__ = 'real_a'
    unused_with_stdlib.__qualname__ = 'unused_with_stdlib'
    _cribo_self.unused_with_stdlib = unused_with_stdlib
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
real_a.__init__ = _cribo_init___cribo_5676b5_real_a
def _cribo_init___cribo_85e139_real_b(_cribo_self, *, _cribo_getattr=getattr, _cribo_base_exception=BaseException):
    if _cribo_getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if _cribo_getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = ''
    _cribo_self.__doc__ = None

    def from_b():
        from_c = _cribo_init___cribo_5676b5_real_a(globals()['real_a']).from_c
        return f"B -> {from_c()} -> {continue_chain()}"
    from_b.__module__ = 'real_b'
    from_b.__qualname__ = 'from_b'
    _cribo_self.from_b = from_b

    def continue_chain():
        from_d = _cribo_init___cribo_85e139_real_b(globals()['real_b']).from_d
        _cribo_self.from_d = from_d
        return from_d()
    continue_chain.__module__ = 'real_b'
    continue_chain.__qualname__ = 'continue_chain'
    _cribo_self.continue_chain = continue_chain

    def from_d():
        from_e = _cribo_init___cribo_5676b5_real_a(globals()['real_a']).from_e
        return f"D(->B) -> {from_e()}"
    from_d.__module__ = 'real_b'
    from_d.__qualname__ = 'from_d'
    _cribo_self.from_d = from_d

    def unused_function_b():
        return "Unused B"
    unused_function_b.__module__ = 'real_b'
    unused_function_b.__qualname__ = 'unused_function_b'
    _cribo_self.unused_function_b = unused_function_b

    def unused_with_symlink():
        unused_function_a = _cribo_init___cribo_5676b5_real_a(globals()['real_a']).unused_function_a
        from_a = _cribo_init___cribo_5676b5_real_a(globals()['real_a']).from_a
        return f"Unused symlink -> {from_a()}"
    unused_with_symlink.__module__ = 'real_b'
    unused_with_symlink.__qualname__ = 'unused_with_symlink'
    _cribo_self.unused_with_symlink = unused_with_symlink

    class UnusedClass:

        @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'real_b'), _cribo_f)[1])
        def __init__(self):
            from_c = _cribo_init___cribo_5676b5_real_a(globals()['real_a']).from_c
            self.value = from_c()

        @(lambda _cribo_f, _cribo_setattr=setattr: (_cribo_setattr(_cribo_f, '__module__', 'real_b'), _cribo_f)[1])
        def get_value(self):
            return self.value
    UnusedClass.__module__ = 'real_b'
    UnusedClass.__qualname__ = 'UnusedClass'
    _cribo_self.UnusedClass = UnusedClass
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
real_b.__init__ = _cribo_init___cribo_85e139_real_b
real_a = _cribo_init___cribo_5676b5_real_a(real_a)
start_chain = real_a.start_chain
print("Testing multi-symlink circular dependency")
result = start_chain()
print(f"Chain result: {result}")
print("SUCCESS: Multi-symlink circular dependency handled!")
