crates/cribo/tests/snapshots/bundled_code@sys_modules_failed_init.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/sys_modules_failed_init/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
helper = _cribo.types.SimpleNamespace(__name__='helper', __initializing__=False, __initialized__=False)
def _cribo_init___cribo_1e8e84_helper(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    self.__spec__ = None
    _sys.modules[self.__name__] = self
    try:
        """Self-registering module whose initialization fails."""
        sys = _cribo.sys
        self.sys = sys
        self.sys = sys
        SELF = _cribo.sys.modules[self.__name__]
        self.SELF = SELF
        raise RuntimeError("helper failed to initialize")
        self.__initialized__ = True
        self.__initializing__ = False
        return self
    except BaseException:
        self.__initializing__ = False
        if _sys.modules.get(self.__name__) is self:
            del _sys.modules[self.__name__]
        raise
helper.__init__ = _cribo_init___cribo_1e8e84_helper
sys = _cribo.sys
try:
    helper = _cribo_init___cribo_1e8e84_helper(helper)
except RuntimeError:
    print("caught:", "helper" in _cribo.sys.modules)
try:
    helper = _cribo_init___cribo_1e8e84_helper(helper)
except RuntimeError:
    print("retried and raised again")
